--- a/app/assets/styles/global.css
+++ b/app/assets/styles/global.css
@@ -3,19 +3,13 @@
   --grid-base: 10px;
   --body-font: "PT Serif";
   --product-name-font: "Montserrat", sans-serif;
-  --panel-background-color: #1f212a;
-  --green: #21a721;
-  --cream: #dcdcc8;
-  --container-border: #2c2d40;
-  --text-light: #71777f;
   --text-dark: #454759;
 
   /* end re-design vars */
-  --black: #444343;
-  --blue: #96c4f7;
-  --darkest-grey: #616a77;
+  --blue: #03a9f4;
+  --darkest-grey: #363b41;
   --light-grey: #f9f9f9;
-  --light-med-grey: #b3bbc7;
+  --light-med-grey: #98a0ac;
   --med-grey: #b3bbc7;
   --transparent-white: rgba(255, 255, 255, 0.4);
   --primary-color-0: var(--blue);
@@ -41,7 +35,6 @@
   --margin-left: var(--medium-space);
   --margin-right: var(--medium-space);
 
-  --main-content-width: 50%;
   --main-content-margin-right: var(--medium-space);
   --main-content-margin-top: var(--small-space);
 
@@ -70,6 +63,7 @@ p {
 
 a {
   text-decoration: none;
+  color: var(--light-gray);
 }
 
 li {
@@ -79,13 +73,70 @@ li {
 
 body {
   background-color: #f5f5f5;
+  font-family: var(--body-font);
 }
 
-#app {
-  width: 100vw;
+.portfolio-site {
+  display: grid;
+  grid-template-columns:
+    [col1] 2fr [col2] 140px [col3] 3fr
+    [col4] 1fr [col5] 1fr
+    [col6] 3fr [col7] 140px [col8] 2fr [col-end];
+  grid-template-rows:
+    [row1] 45px
+    [row2] 30px
+    [row3] 1.5fr
+    [row4] 2fr
+    [row5] 120px
+    [row-end];
+  height: 100vh;
+}
+
+.navigation {
+  color: #565a6d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--product-name-font);
+  grid-row: row2;
+  grid-column-start: col1;
+  grid-column-end: row-end;
 }
 
 .main-view {
   margin: 0 auto;
   width: 70%;
+}
+
+.painting-left {
+  grid-row-start: row1;
+  grid-row-end: row-end;
+  grid-column: col1;
+  filter: grayscale(100%);
+  overflow: hidden;
+  z-index: -1;
+}
+
+.painting-right {
+  grid-row-start: row1;
+  grid-row-end: row-end;
+  grid-column: col8;
+  filter: grayscale(100%);
+  overflow: hidden;
+  transform: scaleX(-1);
+  z-index: -1;
+}
+
+main {
+  grid-column-start: col2;
+  grid-column-end: col8;
+  grid-row-start: row3;
+  grid-row-end: row6;
+}
+
+.focus-panel {
+  grid-row: row3;
+  background-color: #f1f8b4c9;
+  grid-column-start: col1;
+  grid-column-end: col9;
 }
