--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url("./app/assets/styles/global.css");
 
 @import url("./app/components/home/home.css");
-@import url("./app/assets/styles/widgets/social_bar.css");
+@import url("./app/components/app.css");
 @import url("./app/components/widgets/header.css");
 @import url("./app/components/widgets/footer.css");
 @import url("./app/assets/styles/art/art_index.css");
