--- a/app/components/widgets/header.css
+++ b/app/components/widgets/header.css
@@ -1,11 +1,11 @@
 header {
   display: flex;
-  justify-content: center;
   align-items: center;
-  grid-column-start: col1;
+  grid-column-start: col2;
   grid-column-end: row-end;
   grid-row-start: row1;
   grid-row-end: row3;
+  padding: 0 60px;
 }
 
 .name {
