--- a/src/components/page/footer/footer-styles.css
+++ b/src/components/page/footer/footer-styles.css
@@ -17,7 +17,7 @@
   color: var(--secondary-color-0);
 }
 
-.social-links {
+.socialLinks {
   color: var(--light-med-grey);
   display: flex;
   justify-content: space-between;
