--- a/src/components/page/header/header-styles.css
+++ b/src/components/page/header/header-styles.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   grid-column-start: col2;
-  grid-column-end: row-end;
+  grid-column-end: col8;
   grid-row-start: row1;
   grid-row-end: row3;
   padding: 0 60px;
