--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -92,7 +92,8 @@ main {
   grid-column-end: col8;
   grid-row-start: row3;
   grid-row-end: row5;
-  padding: 40px 60px;
+  padding: 0px 60px 40px;
+  position: relative;
 }
 
 @media only screen and (min-width: 1024px) {
