--- a/src/components/section/home/home-styles.css
+++ b/src/components/section/home/home-styles.css
@@ -1,46 +1,39 @@
+.home {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  height: 100%;
+  justify-content: center;
+}
+
 .motivation {
-  display: grid;
-  grid-template-columns: [col1] 2fr [col2] 3fr [end];
-  grid-template-rows: [row1] 1fr [row2] 100px [row3] 2fr;
+  position: absolute;
   height: 100%;
 }
 
 .focusHeading {
-  grid-column: col1;
-  grid-row-start: row1;
   font-size: var(--type-x-large);
-  margin-bottom: 40px;
+  margin-bottom: 10%;
 }
 
 .venn {
-  grid-column-start: col1;
-  grid-column-end: end;
-  grid-row-start: row1;
-  grid-row-end: end;
   display: grid;
   grid-template-columns: [col0] 1fr [col1] 1fr [col3] 220px [col5] 1fr [end];
   grid-template-rows: [row1] 1fr;
   align-items: flex-end;
+  height: 100%;
+  padding: 20px 0;
 }
 
 .venn:nth-of-type(1) {
-  position: relative;
-  left: 50px;
-}
-.venn:nth-of-type(2) {
-  position: relative;
-  left: 100px;
-}
-.venn:nth-of-type(3) {
-  position: relative;
-  left: 150px;
+  position: absolute;
+  left: -75px;
 }
 
 .summary {
-  grid-column-start: col1;
-  grid-column-end: col2;
-  grid-row-start: row3;
-  margin-right: 40px;
+  text-align: center;
+  max-width: 600px;
 }
 
 .circleA {
@@ -73,17 +66,17 @@
 
 .circleA:nth-of-type(4) {
   position: relative;
-  left: 40px;
+  left: -30px;
 }
 
 .circleA:nth-of-type(5) {
   position: relative;
-  left: 50px;
+  left: -20px;
 }
 
 .circleA:nth-of-type(6) {
   position: relative;
-  left: 60px;
+  left: -10px;
 }
 
 .circleB {
@@ -106,4 +99,9 @@
   width: 60%;
   border-radius: 50%;
   border: 5px solid rgba(3, 169, 244, 0.16);
+}
+
+@media only screen and (min-width: 1024px) {
+  .summary {
+  }
 }
